--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
-  <script src="https://unpkg.com/p5.xr"></script>
+  <script src="https://unpkg.com/p5.xr@0.3.2-rc.3/dist/p5xr.js"></script>
+  
   <script language="javascript" type="text/javascript" src="testVR.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
 
